--- a/1.html
+++ b/1.html
@@ -3,11 +3,17 @@
 <head>
 <title> WEB1 - html</title>
 <meta charset="utf-8">
+<style> a{
+color:black;text-decoration: none;
+
+}
+
+</style>
 </head>
 <body>
 <h1><a href="index.html">WEB</a></h1>
 <ol>
-<li><a href="1.html">HTML</a></li>
+<li><a href="1.html"style="color:red;text-decoration:underline;">HTML</a></li>
 <li><a href="2.html">CSS</a></li>
 <li><a href="3.html">Javascript</a></li>
 </ol>
@@ -21,7 +27,7 @@ page</strong> and web applications.web
 browsers receive HTML documents from a
 web sever or from local storage and
 render them into multimeida web page.
-<img src="logo.png" width="50%">
+<img src="logo.png" width="20%">
 </p><p style="margin-top:45px;">
 HTML elements are the building blocks
 of HTML pages. With HTML constructs,
