--- a/2.html
+++ b/2.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html>
 <head>
-<title> WEB1 - html</title>
+<title> WEB1 - CSS</title>
 <meta charset="utf-8">
+<style>
+  a{
+    color:black; text-decoration: none;
+  }
+</style>
 </head>
 <body>
 <h1><a href="index.html">WEB</a></h1>
 <ol>
 <li><a href="1.html">HTML</a></li>
-<li><a href="2.html">CSS</a></li>
+<li><a href="2.html"style="color:red;text-decoration:underline;">CSS</a></li>
 <li><a href="3.html">Javascript</a></li>
 </ol>
-<h1>HTML</h1>
+<h1>CSS</h1>
 <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5
 specification">
 Hypertext Markup language (HTML)</a> is the
