--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<title> WEB1 - html</title>
+<title> WEB1 - WEB</title>
 <meta charset="utf-8">
+<style>
+  a{
+    color:black;text-decoration: none;
+  }
+</style>
 </head>
 <body>
 <h1><a href="index.html">WEB</a></h1>
